<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blockContent"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nesca.giuseppe.volleytutorial.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:fillViewport="false">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="165sp"
            android:layout_height="144sp"
            android:background="@drawable/ball"
            android:layout_gravity="center_horizontal"
            android:onClick="info"/>
        <TextView
            style="@style/titleStyle"
            android:id="@+id/tit_block"
            android:text="@string/blockMainTitle"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/visto_dallalto"
            />
        <TextView
            style="@style/spiegazioneStyle"
            android:id="@+id/blockMainSpiegazione"
            android:text="@string/blockMainSpiegazione"/>
        <TextView
            style="@style/subTitleStyle"
            android:id="@+id/blockTecnicaTitle"
            android:text="@string/blockTecnicaTitle"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:src="@drawable/gesto_con_la_palla"/>
        <TextView
            style="@style/spiegazioneStyle"
            android:id="@+id/blockTecnicaSpiegazione"
            android:text="@string/blockTecnicaSpiegazione"/>
        <TextView
            style="@style/subTitleStyle"
            android:id="@+id/blockStrategieTitle"
            android:text="@string/blockStrategieTitle"/>
        <TextView
            style="@style/spiegazioneStyle"
            android:id="@+id/blockStrategieSpiegazione"
            android:text="@string/blockStrategieSpiegaione"/>
       <!-- se la aggiungo va lento e mi dice che il thread potrebbe fare troppo lavoro.. perchè?
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/coperturamuro"/>
        -->
    </LinearLayout>

</ScrollView>
