<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nesca.giuseppe.volleytutorial.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:fillViewport="false">


    <ScrollView
        android:id="@+id/spikeContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/yball"
            android:layout_gravity="center_horizontal"
            android:onClick="info"/>


        <TextView
            style="@style/titleStyle"
            android:id="@+id/welcomeText"
            android:text="@string/att" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/spiketit"/>
        <TextView
            android:id="@+id/welcomeText2"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/att_info1"
            android:fontFamily="sans-serif-small"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"/>
        <TextView
            style="@style/subTitleStyle"
            android:id="@+id/saltoTitle"
            android:text="@string/salt" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/spike_approach"/>

        <TextView
            style="@style/spiegazioneStyle"
            android:id="@+id/welcomeText3"
            android:text="@string/att_info2"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/welcomeText4"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salto"
            android:fontFamily="sans-serif-small"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bracciosteso"/>

        <TextView
            android:id="@+id/movManT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movMan"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/manoavvolgente" />
        <TextView
            android:id="@+id/movManS"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movManS"
            android:fontFamily="sans-serif-small"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"/>


    </LinearLayout>
    </ScrollView>

</RelativeLayout>
